--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -214,6 +214,7 @@ a {
 }
 
 .home-cover {
+  width: 100vw;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -380,6 +381,7 @@ a {
 }
 
 .home-text-about {
+  width: 100vw;
   display: flex;
   padding: 20px;
   padding-top: 100px;
@@ -413,6 +415,7 @@ a {
 }
 
 .home-faq {
+  width: 100vw;
   display: flex;
   padding: 20px;
   padding-top: 100px;
@@ -462,6 +465,7 @@ a {
 }
 
 .home-partners {
+  width: 100vw;
   display: flex;
   padding: 20px;
   padding-bottom: 77px;
@@ -489,6 +493,7 @@ a {
 }
 
 footer {
+  width: 100vw;
   height: 200px;
   display: flex;
   justify-content: center;
