--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -146,14 +146,14 @@ a {
   align-items: center;
   justify-content: space-between;
   padding: 10% 0px 170% 0px;
-  font-family: 'Orbitron', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   font-weight: lighter;
   font-size: medium;
   top: 0;
   height: 100%;
   width: 50vw;
   background-color: rgba(0, 0, 0, 0.258);
-  color: rgba(127, 245, 243, 0.47);
+  color: rgb(127 245 243);
   border: none;
   backdrop-filter: blur(20px);
   transition: transform 0.5s ease-in-out;
@@ -166,7 +166,7 @@ a {
   justify-content: center;
   align-items: center;
   position: fixed;
-  background-color: rgba(15, 199, 190, 0.659);
+  background-color: rgb(0 255 255);
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
   color: rgb(0, 0, 0);
