fix: home logo width

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1221,7 +1221,7 @@ div.accept-box {
 
   .home-cover-logo {
     padding-bottom: 0px;
-    height: 40%;
+    width: 77%;
     position: inherit;
     margin-right: 0;
   }
