--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1591,6 +1591,10 @@ div.accept-box {
     color: #000;
   }
 
+  .faq-image {
+    width: 100vw;
+  }
+
   footer {
     flex-direction: column-reverse;
     height: auto;
