--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -865,7 +865,7 @@ mark {
 }
 
 .message-form .group-check div:hover {
-  background-color: rgba(255, 255, 0, 0.2);
+  background-color: #00bebe;
   color: black;
 }
 
@@ -1005,7 +1005,6 @@ div.contact-group-activity {
 .contact-group-activity input {
   width: 25px;
   height: auto;
-  background: #ffffff;
 }
 
 .contact-group-activity label {
@@ -1165,6 +1164,8 @@ div.accept-box {
 
 .lgpdArea p {
   font-size: 15px;
+  text-align: justify;
+  padding: 10px;
 }
 
 .accept-box input {
@@ -1361,10 +1362,6 @@ div.accept-box {
     top: 600px;
   }
 
-  .contact-text {
-    position: inherit;
-  }
-
   .contact-text h4 {
     display: none;
   }
@@ -1412,10 +1409,10 @@ div.accept-box {
   }
 
   .contact-text {
+    position: inherit;
     display: flex;
     flex-direction: column;
     width: 77vw;
-    margin-bottom: 30px;
     padding: 0;
   }
 
@@ -1437,6 +1434,47 @@ div.accept-box {
     font-size: 20px;
     color: #6bffeb63;
     z-index: 99;
+  }
+
+  div.contact-group-activity {
+    display: flex;
+    margin: 20px;
+    padding: 10px;
+    background-color: rgba(0, 136, 136, 0.349);
+  }
+  
+  .message-form .contact-group-activity input {
+    height: 30px;
+    background: #ffffff;
+  }
+  
+  .contact-group-activity label {
+    margin-left: 0px;
+    margin-top: 0;
+    font-size: 20px;
+    text-align: center;
+  }
+
+  .message-form  div.accept-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 0px;
+    padding: 10px;
+  }
+  
+  .message-form .accept-box input {
+    width: 20px;
+    height: 20px;
+    background: #ffffff;
+    margin: 0;
+  }
+  
+  .accept-box label {
+    margin-left: 10px;
+    margin-top: 0;
+    font-size: 15px;
   }
 
   .message-form-container {
@@ -1462,7 +1500,6 @@ div.accept-box {
 
   .message-form {
     height: auto;
-    background-color: #25abff0f;
     z-index: 2;
     padding: 0px;
     display: flex;
@@ -1472,7 +1509,6 @@ div.accept-box {
     font-family: 'Montserrat', sans-serif;
     font-weight: lighter;
     font-size: 20px;
-    color: #fdf0377b;
   }
 
   .message-form div {
@@ -1483,8 +1519,6 @@ div.accept-box {
   .message-form input {
     width: 100%;
     height: 50px;
-    background-color: #00000038;
-    color: rgba(255, 255, 255, 0.289);
     font-size: 20px;
     font-family: 'Montserrat', sans-serif;
     border: none;
@@ -1504,7 +1538,7 @@ div.accept-box {
 
   input::placeholder,
   textarea::placeholder {
-    color: rgba(239, 255, 158, 0.197);
+    color: rgba(0, 0, 0, 0.584);
     font-size: medium;
   }
 
@@ -1520,7 +1554,6 @@ div.accept-box {
   .message-form textarea {
     width: 100%;
     height: 100px;
-    background-color: #00000038;
     border: auto;
     font-size: 20px;
     font-family: 'Montserrat', sans-serif;
