--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -62,9 +62,20 @@ a {
   font-family: 'ubuntu', sans-serif;
   background-color: #00888818;
   backdrop-filter: blur(7px);
-  border-bottom: 3px solid #008888;
+  border-bottom: 3px solid rgba(255, 60, 0, 0.436);
   color: rgba(255, 255, 255, 0.846);
   z-index: 999;
+  transition: background-color 1s, color 1s;
+}
+
+.scroll-efect {
+  background-color: #088;
+}
+
+.scroll-efect img {
+  border: 3px solid rgb(255, 60, 0);
+  width: 50px;
+  height: 50px;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@300;900&family=Orbitron&family=Raleway:wght@100;700&family=Six+Caps&display=swap');
@@ -91,7 +102,9 @@ a {
   margin-right: 15px;
   opacity: 0.7;
   border-radius: 30px;
+  transition: width 0.5s, height 0.5s;
 }
+
 
 .header-name {
   display: flex;
@@ -259,7 +272,7 @@ a {
 }
 
 .Clima-title {
-  color: #008080;
+  color: #802000;
 }
 
 .LOA-title {
@@ -519,6 +532,7 @@ aside a {
   align-items: center;
   filter: brightness(90%);
   background-color: transparent;
+  border-radius: 100%;
 }
 
 .developing {
@@ -1104,12 +1118,16 @@ div.contact-group-activity {
 }
 
 .faq-main {
+  position: relative;
   display: flex;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
   font-family: Montserrat;
+}
+
+.faq-main span {
   font-size: 14px;
+
 }
 
 .faq-image-container {
@@ -1132,21 +1150,22 @@ div.contact-group-activity {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: 50px;
-  font-family: Montserrat;
+  font-family: 'Montserrat';
   font-weight: 700;
+  font-size: 50px;
+  text-shadow: 0px 3px 3px #000;
 }
 
 .faq-search input {
-  width: 400px;
+  width: 30vw;
   height: 50px;
   margin-top: 15px;
   text-align: start;
-  padding-left: 10px;
+  padding-left: 15px;
   background-color: #fcfcfc;
   color: rgb(13, 13, 13);
-  border-radius: 15px;
   border: 5px solid #00888892;
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.5);
   font-size: 23px;
 }
 
@@ -1156,7 +1175,7 @@ div.contact-group-activity {
 }
 
 .faq-search input::placeholder {
-  color: #5656564b;
+  color: #5656567e;
   font-size: 20px;
 }
 
@@ -1166,8 +1185,7 @@ div.contact-group-activity {
 }
 
 .ask-container {
-  flex: 1;
-  margin-top: 20px;
+  margin: 40px 0;
   display: flex;
   flex-direction: column;
   background-color: #003c3ca7;
@@ -1176,6 +1194,7 @@ div.contact-group-activity {
   align-items: center;
   font-family: Montserrat;
   padding: 20px;
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.5);
 }
 
 .ask-container h1 {
@@ -1217,38 +1236,204 @@ div.accept-box {
   background-color: #008080;
 }
 
-.single-news-banner {
-  background-color: #519595;
-  color: rgb(253, 253, 253);
-  border: 3px solid black;
-  height: 300px;
-  width: 100vw;
-  margin-top: 60px;
+.news-pg {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  font-family: 'Roboto', sans-serif;
 }
 
-.news-text-area {
+.news-banner {
+  height: 20vw;
   width: 100%;
+  background-image: url('../images/news-bg.jpg');
+  background-size: cover;
+  background-position: start center;
+  margin-top: 60px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  background-color: #ccc;
+  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.595);
+  text-align: center;
 }
+
+.news-banner h1 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 70px;
+  color: #088;
+  text-shadow: 5px 10px black;
+  text-transform: uppercase;
+}
+
+.news-area {
+  width: 80%;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding: 50px;
+  box-shadow: 0 10px 100px rgba(0, 0, 0, 0.131);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.news-card {
+  width: 100%;
+  height: 150px;
+  box-shadow: 0px 3px 10px #00000060;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  transition: width 0.2s;
+}
+
+.news-card:hover {
+  width: 103%;
+}
+
+.news-card img {
+  min-width: 20%;
+  max-width: 20%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.news-card-text {
+  position: relative;
+  width: 60vw;
+  height: 120px;
+  margin: 0 20px;
+  display: flex;
+  flex-direction: column;
+  color: black;
+  overflow: hidden;
+  background: linear-gradient(to bottom, transparent 0%, transparent 40%, #fff 100%);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.news-card-text p {
+  text-align: justify;
+}
+
+.news-card-text span {
+  width: 100%;
+  color: #0005;
+}
+
+.news-card-text .news-card-title h1 {
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  transition: width 0.2s;
+}
+
+.news-card:hover .news-card-text .news-card-title h1 {
+  width: 100%;
+}
+
+.news-card div h1 {
+  margin-bottom: 10px;
+}
+
 .news-text {
   width: 80vw;
-  margin-top: 30px;
+  margin: 40px 0;
   box-shadow: 0px 0px 10px #888888;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Arial', sans-serif;
   color: black;
-  font-size: larger;
+  font-size: 20px;
   display: flex;
   justify-content: center;
   text-align: justify;
+  word-wrap: normal;
   padding: 30px 60px;
 }
 
+.news-card-text-gradient {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, transparent 0%, transparent 50%, #ffffff 100%);
+}
+
+.single-news-banner {
+  height: 20vw;
+  width: 100vw;
+  background-image: url('../images/LOGO-LOACLIMA-SIMBOLO-fundo-transparente.png');
+  background-size: 100%;
+  background-position: center;
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.595);
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  color: #088;
+  text-shadow: 1px 1px black;
+  font-family: 'Ubuntu', Courier, monospace;
+  font-size: 2vw;
+}
+
+.news-pg #news-text-img {
+  width: 30vw;
+  margin-right: 30px;
+}
+
+.news-pg span {
+  font-size: medium;
+}
+
 @media (max-width: 500px) {
+  .news-area {
+    width: 90%;
+    padding: 10px;
+  }
+
+  .news-card-title h1 {
+    font-size: 5vw;
+  }
+
+  .news-card-text .news-card-title h1 {
+    width: 100%;
+    white-space: none;
+    overflow: none;
+    text-overflow: none;
+    transition: width 0.2s, height 0.2s;
+  }
+
+  .news-card-text {
+    width: 80vw;
+    padding: 10px;
+  }
+
+  .news-banner {
+    height: 150px;
+  }
+
+  .news-banner h1 {
+    font-size: 50px;
+  }
+
+  .news-card {
+    flex-direction: column;
+    height: 280px;
+  }
+
+  .news-card img {
+    max-width: none;
+    min-width: none;
+    height: 50%;
+    width: 100%;
+    object-fit: cover;
+  }
+
   .navbar {
     display: none;
   }
@@ -1311,7 +1496,7 @@ div.accept-box {
   .home-text-cover h1 {
     font-size: 50px;
   }
-  
+
   .home-text-about p {
     text-align: justify;
     font-size: 20px;
@@ -1511,12 +1696,12 @@ div.accept-box {
     padding: 10px;
     background-color: rgba(0, 136, 136, 0.349);
   }
-  
+
   .message-form .contact-group-activity input {
     height: 30px;
     background: #ffffff;
   }
-  
+
   .contact-group-activity label {
     margin-left: 0px;
     margin-top: 0;
@@ -1524,7 +1709,7 @@ div.accept-box {
     text-align: center;
   }
 
-  .message-form  div.accept-box {
+  .message-form div.accept-box {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -1532,14 +1717,14 @@ div.accept-box {
     margin: 0px;
     padding: 10px;
   }
-  
+
   .message-form .accept-box input {
     width: 20px;
     height: 20px;
     background: #ffffff;
     margin: 0;
   }
-  
+
   .accept-box label {
     margin-left: 10px;
     margin-top: 0;
@@ -1684,7 +1869,7 @@ div.accept-box {
   .faq-search label {
     text-align: center;
   }
-  
+
   .faq-search input {
     width: 90vw;
   }
@@ -1702,7 +1887,7 @@ div.accept-box {
     height: auto;
   }
 
-  footer img{
+  footer img {
     width: 50%;
   }
 
