--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1394,6 +1394,24 @@ div.accept-box {
   font-size: medium;
 }
 
+.hamburger {
+  display: flex;
+  flex-direction: column;
+  height: 45px;
+  margin-bottom: 7px;
+  background-color: #00000000;
+}
+
+.hamburger div {
+  position: relative;
+  width: 40px;
+  height: 10px;
+  border-radius: 0px;
+  background-color: #ffffff84;
+  margin-top: 8px;
+  transition: all 0.3s ease-in-out;
+}
+
 @media (max-width: 500px) {
   .news-area {
     width: 90%;
