fix: some tecnical code changes and implement use ameciclo project api data (cms.ameciclo.org/services)

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1414,6 +1414,10 @@ div.accept-box {
 }
 
 @media (max-width: 500px) {
+  .home-title {
+    margin-top: 30px;   
+  }
+  
   .news-text {
     display: flex;
     flex-direction: column;
