--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -25,7 +25,8 @@ video {
 }
 
 .home-video {
-  filter: blur(1px) brightness(50%);
+  position: fixed;
+  filter: blur(1px) brightness(100%) opacity(0.2);
   width: calc(100% + 10px);
   height: calc(100% + 10px);
   margin: -2px;
@@ -73,9 +74,10 @@ a {
 }
 
 .scroll-efect img {
-  border: 3px solid rgb(255, 60, 0);
-  width: 50px;
-  height: 50px;
+  height: 120px;
+  width: 120px;
+  margin-top: 20px;
+  margin-bottom: 10px
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@300;900&family=Orbitron&family=Raleway:wght@100;700&family=Six+Caps&display=swap');
@@ -97,14 +99,12 @@ a {
 }
 
 .logo {
-  width: 40px;
-  height: 40px;
+  width: 100px;
   margin-right: 15px;
   opacity: 0.7;
   border-radius: 30px;
   transition: width 0.5s, height 0.5s;
 }
-
 
 .header-name {
   display: flex;
@@ -229,8 +229,9 @@ a {
 
 .home-cover {
   width: 100vw;
-  height: 100vh;
+  height: 80vh;
   display: flex;
+  flex-direction: column-reverse;
   align-items: center;
   background-color: rgba(7, 255, 152, 0);
   justify-content: space-around;
@@ -240,6 +241,7 @@ a {
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@300;900&family=Orbitron&family=Raleway:wght@100;700&family=Six+Caps&family=Ubuntu&display=swap');
 
 .home-text-cover {
+  margin-top: -200px;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -248,7 +250,7 @@ a {
   font-family: 'Montserrat', sans-serif;
   background-color: rgba(7, 44, 255, 0);
   font-size: 50px;
-  color: white;
+  color: #1d9371;
   z-index: 99;
 }
 
@@ -257,6 +259,7 @@ a {
 }
 
 .home-text-cover span {
+  color: #1d9371;
   padding-bottom: 10px;
 }
 
@@ -287,7 +290,6 @@ a {
   justify-content: center;
   overflow: hidden;
   white-space: nowrap;
-  color: rgb(255, 255, 255);
   font-size: 40px;
   font-weight: lighter;
   font-family: 'Montserrat', sans-serif;
@@ -327,8 +329,8 @@ a {
   align-items: center;
   border: none;
   outline: none;
-  color: #b5b3b3;
-  background: #111;
+  color: #fefefe;
+  background: #1d9371;
   cursor: pointer;
   position: relative;
   z-index: 0;
@@ -372,7 +374,7 @@ a {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: #014a51fe;
+  background: #1d9371;
   left: 0;
   top: 0;
   border-radius: 10px;
@@ -398,13 +400,11 @@ a {
   padding: 20px;
   padding-top: 100px;
   padding-bottom: 77px;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   font-family: 'ubuntu', sans-serif;
-  background-color: #003636;
+  background-color: #1d9371;
   font-size: 25px;
-  color: #ffffffc7;
 }
 
 .home-text-about a {
@@ -414,8 +414,8 @@ a {
 }
 
 .home-text-about p {
-  max-width: 1300px;
-  text-align: center;
+  max-width: 700px;
+  text-align: justify;
   color: #f5f8f8;
 }
 
@@ -436,10 +436,9 @@ a {
   justify-content: center;
   align-items: center;
   font-family: 'ubuntu', sans-serif;
-  background-color: #022e364a;
   font-size: 30px;
   border-bottom: 1px solid white;
-  color: #fbfbfbd4;
+  color: #008888;
 }
 
 .faq-card {
@@ -463,7 +462,7 @@ a {
 .contact-link-btn {
   width: auto;
   padding: 13px;
-  background-color: rgba(0, 51, 50, 0.548);
+  background-color: #1d9371;
   font-family: 'Montserrat', sans-serif;
   font-size: medium;
   color: white;
@@ -528,7 +527,6 @@ aside a {
 .home-cover-logo {
   width: 500px;
   display: flex;
-  opacity: 0.7;
   align-items: center;
   filter: brightness(90%);
   background-color: transparent;
@@ -1233,11 +1231,19 @@ div.accept-box {
   font-size: medium;
 }
 
-.header-news {
+.header-home {
+  background-color: #1d9371;
+}
+
+.header-noticias {
   background-color: #008080;
 }
 
 .header-faq {
+  background-color: #008080;
+}
+
+.header-contato {
   background-color: #008080;
 }
 
@@ -1567,6 +1573,7 @@ div.accept-box {
   }
 
   .home-text-cover {
+    margin-top: -50px;
     width: 80%;
     margin-left: 0;
     margin-right: 10px;
@@ -1583,6 +1590,9 @@ div.accept-box {
     font-size: 50px;
   }
 
+  .home-text-about {
+    flex-direction: column;
+  }
   .home-text-about p {
     text-align: justify;
     font-size: 20px;
