--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1515,20 +1515,6 @@ div.accept-box input, label {
   align-items: center;
 }
 
-.observatory-docs {
-  font-family: 'Roboto';
-  color: #1d9371;
-  width: 100%;
-  height: 110%;
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-}
-
-.observatory-docs div {
-  padding: 20px;
-}
-
 .observatory-area #att {
   width: 100%;
   color: #1d937175;
@@ -1539,12 +1525,10 @@ div.accept-box input, label {
 }
 
 .observatory-area .observatory-titles {
-  max-width: 500px;
+  width: 100%;
   color: #1d9371;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.45);
-  font-family: 'Montserrat', sans-serif;
-  font-size: 30px;
-  font-weight: 100;
+  font-family: 'Roboto', sans-serif;
+  font-size: 25px;
   text-align: center;
   margin-top: 10px;
 }
@@ -1553,10 +1537,10 @@ div.accept-box input, label {
   font-family: 'Montserrat', sans-serif;
   width: 100%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   color: #000;
-  padding: 50px 0 50px 0;
+  padding: 30px 0 50px 0;
 }
 
 .display-flex-center {
@@ -1684,6 +1668,20 @@ div.accept-box input, label {
 
 #loading-gif {
   width: 100px;
+}
+
+.observatory-docs {
+  font-family: 'Roboto';
+  color: #1d9371;
+  width: 100%;
+  height: 110%;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+
+.observatory-docs div {
+  padding: 20px;
 }
 
 @media (max-width: 500px) {
@@ -2294,7 +2292,7 @@ div.accept-box input, label {
   }
 
   .carousel-container {
-    width: 80vw;
+    width: 100vw;
     height: 400px;
     overflow: hidden;
     position: relative;
