--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -460,8 +460,9 @@ a {
 .card-container {
   width: 100%;
   display: flex;
+  justify-content: center;
+  align-items: flex-start;
   margin: 20px;
-  justify-content: space-around;
 }
 
 .home-faq {
@@ -529,17 +530,39 @@ a {
   color: #fbfbfbd4;
 }
 
-.partner-card {
-  width: 150px;
-  height: 150px;
+.parners-container {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: large;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.partner-card {
+  width: 100%;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: medium;
   background-color: rgba(0, 51, 51, 0.548);
   border-radius: 100px;
   margin: 10px;
   color: white;
+}
+
+.partner-card p {
+  width: 100%;
+}
+
+.partner-card img {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
 }
 
 footer {
@@ -948,7 +971,8 @@ mark {
   justify-content: flex-start;
 }
 
-.message-form input, textarea {
+.message-form input,
+textarea {
   width: 100%;
   height: 50px;
   font-size: 20px;
@@ -1298,7 +1322,8 @@ div.accept-box {
   align-items: flex-end;
 }
 
-div.accept-box input, label {
+div.accept-box input,
+label {
   margin: 0;
 }
 
@@ -1756,6 +1781,11 @@ div.accept-box input, label {
 }
 
 @media (max-width: 500px) {
+  .parners-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
   .home-title {
     margin-top: 30px;
   }
@@ -2392,7 +2422,7 @@ div.accept-box input, label {
     position: relative;
     margin-bottom: 20px;
   }
-  
+
   .carousel-container h1 {
     color: #000;
     font-family: 'Montserrat', sans-serif;
@@ -2401,7 +2431,7 @@ div.accept-box input, label {
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.45);
     margin: 20px;
   }
-  
+
   .carousel-track {
     display: flex;
     transform: translateX(0);
@@ -2429,7 +2459,7 @@ div.accept-box input, label {
     padding: 20px 0 3px 0;
     font-size: 8px;
   }
-  
+
   footer {
     flex-direction: column-reverse;
     height: auto;
